--- a/apps/pihole/templates/custom-dns.yaml
+++ b/apps/pihole/templates/custom-dns.yaml
@@ -8,3 +8,4 @@ data:
     192.168.0.19 argocd.cereal.box
     192.168.0.19 pihole.cereal.box
     192.168.0.19 kargo.cereal.box
+    192.168.0.19 hello.cereal.box
