--- a/apps/kargo/templates/ingress.yaml
+++ b/apps/kargo/templates/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: kargo
 annotations:
   traefik.ingress.kubernetes.io/router.tls: "true"
+  ingress.kubernetes.io/protocol: https
+  traefik.ingress.kubernetes.io/service.serversscheme: https
 spec:
   rules:
     - host: {{ .Values.host }}
