--- a/apps/templates/pihole.yaml
+++ b/apps/templates/pihole.yaml
@@ -8,9 +8,30 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: {{ .Values.repoURL }}
-    targetRevision: {{ .Values.targetRevision }}
-    path: apps/pihole
+    repoURL: https://mojo2600.github.io/pihole-kubernetes/
+    chart: pihole
+    targetRevision: 2.35.0
+    helm:
+      values: |
+        serviceDns:
+          type: LoadBalancer
+          loadBalancerIP: "192.168.0.19"
+        ingress:
+          enabled: true
+          hosts:
+            - pihole.cereal.box
+        persistentVolumeClaim:
+          enabled: true
+          size: "1Gi"
+        extraEnvVars:
+          TZ: "America/Vancouver"
+          FTLCONF_webserver_api_password: "changeme"
+        dnsmasq:
+          customDnsEntries:
+            - address=/argocd.cereal.box/192.168.0.19
+            - address=/pihole.cereal.box/192.168.0.19
+            - address=/kargo.cereal.box/192.168.0.19
+            - address=/hello.cereal.box/192.168.0.19
   destination:
     server: https://kubernetes.default.svc
     namespace: pihole
@@ -20,3 +41,4 @@ spec:
       prune: true
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
