--- a/apps/hello/templates/deployment.yaml
+++ b/apps/hello/templates/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-app
-  namespace: hello-app
+  name: hello
+  namespace: hello
   labels:
-    app: hello-app
+    app: hello
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hello-app
+      app: hello
   template:
     metadata:
       labels:
-        app: hello-app
+        app: hello
     spec:
       containers:
-        - name: hello-app
+        - name: hello
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: 3000
