--- a/apps/hello/templates/ingress.yaml
+++ b/apps/hello/templates/ingress.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: hello-app-ingress
-  namespace: hello-app
+  name: hello-ingress
+  namespace: hello
 spec:
   rules:
     - host: {{ .Values.host }}
@@ -12,6 +12,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: hello-app
+                name: hello
                 port:
                   number: 80
