--- a/apps/hello/templates/service.yaml
+++ b/apps/hello/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-app
-  namespace: hello-app
+  name: hello
+  namespace: hello
 spec:
   selector:
-    app: hello-app
+    app: hello
   ports:
     - port: 80
       targetPort: 3000
