--- a/apps/hello/templates/service.yaml
+++ b/apps/hello/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello
-  namespace: hello
+  namespace: {{ .Release.Namespace }}
 spec:
   selector:
     app: hello
