--- a/apps/hello-kargo/warehouse.yaml
+++ b/apps/hello-kargo/warehouse.yaml
@@ -4,6 +4,11 @@ metadata:
   name: hello
   namespace: hello
 spec:
+  freightCreationPolicy: Automatic
+  interval: 5m0s
   subscriptions:
     - image:
         repoURL: ghcr.io/jared-paul/hello
+        imageSelectionStrategy: SemVer
+        semverConstraint: "*"
+        discoveryLimit: 20
