--- a/apps/hello-kargo/warehouse.yaml
+++ b/apps/hello-kargo/warehouse.yaml
@@ -11,4 +11,5 @@ spec:
         repoURL: ghcr.io/jared-paul/hello
         imageSelectionStrategy: SemVer
         semverConstraint: "*"
+        strictSemvers: true
         discoveryLimit: 20
