update repo url and add helm

--- a/apps/hello-kargo/production.yaml
+++ b/apps/hello-kargo/production.yaml
@@ -19,3 +19,9 @@ spec:
             apps:
               - name: hello-production
                 namespace: argocd
+                sources:
+                  - repoURL: https://github.com/jared-paul/homelab.git
+                    helm:
+                      images:
+                        - key: image.tag
+                          value: ${{ imageFrom("ghcr.io/jared-paul/hello").Tag }}
