--- a/apps/hello-kargo/staging.yaml
+++ b/apps/hello-kargo/staging.yaml
@@ -18,3 +18,9 @@ spec:
             apps:
               - name: hello-staging
                 namespace: argocd
+                sources:
+                  - repoURL: https://github.com/jared-paul/homelab.git
+                    helm:
+                      images:
+                        - key: image.tag
+                          value: ${{ imageFrom("ghcr.io/jared-paul/hello").Tag }}
