use git clone approach for kargo

--- a/apps/hello-kargo/staging.yaml
+++ b/apps/hello-kargo/staging.yaml
@@ -13,14 +13,6 @@ spec:
   promotionTemplate:
     spec:
       steps:
-        - uses: argocd-update
-          config:
-            apps:
-              - name: hello-staging
-                namespace: argocd
-                sources:
-                  - repoURL: https://github.com/jared-paul/homelab.git
-                    helm:
-                      images:
-                        - key: image.tag
-                          value: ${{ imageFrom("ghcr.io/jared-paul/hello").Tag }}
+        - task:
+            name: hello-promote
+          as: promo
