--- a/apps/templates/hello-production.yaml
+++ b/apps/templates/hello-production.yaml
@@ -14,6 +14,8 @@ spec:
     targetRevision: {{ .Values.targetRevision }}
     path: apps/hello
     helm:
+      valueFiles:
+        - values-production.yaml
       parameters:
         - name: host
           value: hello.cereal.box
