update kargo version

--- a/apps/hello-kargo/warehouse.yaml
+++ b/apps/hello-kargo/warehouse.yaml
@@ -10,6 +10,5 @@ spec:
     - image:
         repoURL: ghcr.io/jared-paul/hello
         imageSelectionStrategy: SemVer
-        semverConstraint: "*"
-        strictSemvers: true
+        constraint: "*"
         discoveryLimit: 20
