--- a/apps/templates/hello-kargo.yaml
+++ b/apps/templates/hello-kargo.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: hello-kargo
   namespace: argocd
+  labels:
+    app.kubernetes.io/part-of: hello
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
