--- a/apps/templates/hello-production.yaml
+++ b/apps/templates/hello-production.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: hello-production
   namespace: argocd
+  labels:
+    app.kubernetes.io/part-of: hello
   annotations:
     kargo.akuity.io/authorized-stage: hello:production
   finalizers:
