--- a/apps/templates/hello-staging.yaml
+++ b/apps/templates/hello-staging.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: hello-staging
   namespace: argocd
+  labels:
+    app.kubernetes.io/part-of: hello
   annotations:
     kargo.akuity.io/authorized-stage: hello:staging
   finalizers:
