add allowed hosts

--- a/apps/homepage/templates/deployment.yaml
+++ b/apps/homepage/templates/deployment.yaml
@@ -20,6 +20,9 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: 3000
+          env:
+            - name: HOMEPAGE_ALLOWED_HOSTS
+              value: {{ .Values.host }}
           volumeMounts:
             - name: config
               mountPath: /app/config/services.yaml
