--- a/home/argocd/app-of-apps/homepage.yaml
+++ b/home/argocd/app-of-apps/homepage.yaml
@@ -8,9 +8,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: {{ .Values.repoURL }}
-    targetRevision: {{ .Values.targetRevision }}
-    path: apps/homepage
+    repoURL: https://github.com/jared-paul/homelab.git
+    targetRevision: main
+    path: home/homepage
   destination:
     server: https://kubernetes.default.svc
     namespace: homepage
