--- a/infra/ansible/inventory.yaml
+++ b/infra/ansible/inventory.yaml
@@ -1,5 +1,8 @@
 all:
   hosts:
     home:
-      ansible_host: 192.168.0.19
+      ansible_host: 192.168.0.200
+      ansible_user: cereal
+    hello:
+      ansible_host: 192.168.0.201
       ansible_user: cereal
