--- a/infra/ansible/home.yaml
+++ b/infra/ansible/home.yaml
@@ -8,6 +8,11 @@
       args:
         creates: /usr/local/bin/k3s
 
+    - name: Make kubeconfig readable
+      ansible.builtin.file:
+        path: /etc/rancher/k3s/k3s.yaml
+        mode: "0644"
+
     - name: Wait for K3s to be ready
       ansible.builtin.command: kubectl wait --for=condition=Ready node --all --timeout=120s
       environment:
