--- a/infra/ansible/hello.yaml
+++ b/infra/ansible/hello.yaml
@@ -3,6 +3,15 @@
   hosts: hello
   become: true
   tasks:
+    - name: Set hostname
+      ansible.builtin.hostname:
+        name: "{{ inventory_hostname }}"
+
+    - name: Add hostname to /etc/hosts
+      ansible.builtin.lineinfile:
+        path: /etc/hosts
+        line: "127.0.1.1 {{ inventory_hostname }}"
+
     - name: Install K3s
       ansible.builtin.shell: curl -sfL https://get.k3s.io | sh -
       args:
