--- a/infra/ansible/home.yaml
+++ b/infra/ansible/home.yaml
@@ -13,7 +13,7 @@
         line: "127.0.1.1 {{ inventory_hostname }}"
 
     - name: Install K3s
-      ansible.builtin.shell: curl -sfL https://get.k3s.io | sh -
+      ansible.builtin.shell: curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--resolv-conf /run/systemd/resolve/resolv.conf" sh -
       args:
         creates: /usr/local/bin/k3s
 
