--- a/infra/ansible/home.yaml
+++ b/infra/ansible/home.yaml
@@ -76,7 +76,7 @@
       ansible.builtin.shell: |
         helm repo add argo https://argoproj.github.io/argo-helm
         helm repo update
-        helm install argocd argo/argo-cd --namespace argocd \
+        helm upgrade --install argocd argo/argo-cd --namespace argocd \
           --version 9.4.2 \
           -f /tmp/argocd-values.yaml \
           --wait --timeout 300s
