--- a/apps/hello/argocd/staging.yaml
+++ b/apps/hello/argocd/staging.yaml
@@ -25,7 +25,7 @@ spec:
           - name: host
             value: hello-staging.cereal.box
   destination:
-    server: https://kubernetes.default.svc
+    server: https://192.168.0.201:6443
     namespace: hello-staging
   syncPolicy:
     automated:
