Fix ksops binary path: mount in /usr/local/bin so it's in PATH

--- a/home/argocd/app-of-apps/argocd.yaml
+++ b/home/argocd/app-of-apps/argocd.yaml
@@ -43,7 +43,7 @@ spec:
               mountPath: /usr/local/bin/sops
               subPath: sops
             - name: custom-tools
-              mountPath: /home/argocd/.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
+              mountPath: /usr/local/bin/ksops
               subPath: ksops
           initContainers:
             - name: install-ksops
